# vm-management

./: .env  CONTRIBUTING.md  Dockerfile  Makefile  README.md  __init__.py  makefile  pyproject.toml  pytest.ini  requirements.txt  setup.py
libs/base-service/: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
libs/base-service/msfwk/: __init__.py  application.py  cache.py  constants.py  context.py  database.py  exceptions.py  main.py  metrics.py  metrics_query.py  middlewares.py  models.py  mqclient.py  notification.py  redis.py  request.py
libs/base-service/msfwk/base/: __init__.py  exceptions.py  interfaces.py
libs/base-service/msfwk/desp/: __init__.py  exceptions.py
libs/base-service/msfwk/desp/rabbitmq/: __init__.py  mq_callback.py  mq_message.py
libs/base-service/msfwk/desp/serco_logs/: models.py  notify.py
libs/base-service/msfwk/schema/: __init__.py  exceptions.py  schema.py
libs/base-service/msfwk/utils/: __init__.py  config.py  conftest.py  dns_solver.py  logging.py  month_range.py  user.py
libs/base-service/pyarmor_runtime_000000/: __init__.py
libs/desp_shared_library/: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
libs/desp_shared_library/despsharedlibrary/schemas/: __init__.py  sandbox_schema.py
libs/desp_shared_library/pyarmor_runtime_000000/: __init__.py
scripts/: software-kit.sh
tests/component/: config.py  mock_application_database_call.py  test_application_ansible.py  test_vm_application.py  test_vm_creation.py  test_vm_delete.py  test_vm_reset.py  utils.py
vm_management/: __init__.py  constants.py  dependencies.py  exceptions.py  main.py  utils.py
vm_management/connectors/: __init__.py  db_connector.py  openstack_connector.py
vm_management/models/: __init__.py  alerts.py  profiles.py  projects.py  server.py
vm_management/routes/: error_handling.py
vm_management/routes/v1/: __init__.py  guacemole.py  metrics.py  openstack_servers.py  servers.py
vm_management/services/: __init__.py  auth_service.py  guacamole_service.py  infrastructure_service.py  lifecycle_service.py  openstack_server_service.py  project_service.py  prometheus_service.py  sandbox_db_service.py  server_service.py
