[project]
name = "vm_management"
version = "1.0.0"
description = ""
authors = []
readme = "README.md"

dependencies = [
    "msfwk>=1.0.19",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.3",
    "despsharedlibrary>=1.0.7",
    "pytest-env>=1.1.4",
    "mako==1.3.8",
    "openstacksdk==4.3.0",
    "kubernetes==32.0.0",
    "Jinja2==3.1.3",
    "ansible-runner==2.4.0",
    "prometheus-api-client==0.5.5",
]

[tool.uv.sources]
msfwk = { index  = "dsy-pip" }

[[tool.uv.index]]
name = "dsy-pip"
url = "https://gitlab.acri-cwa.fr/api/v4/projects/782/packages/pypi/simple"
username = "__token__"
default = false