[project]
name = "msfwk"
version = "1.4.2"
description = "Microservice Framework"
authors = [{ name = "Olivier DAUMAS", email = "olivier.daumas@acri-st.fr" }]

requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "sqlalchemy[postgresql_asyncpg]==2.0.30",
    "sqlalchemy-utils==0.41.2",
    "pydantic==2.8.2",
    "pydantic-settings==2.7.1",
    "psycopg2-binary==2.9.9",
    "pyaml==24.4.0",
    "cacheout==0.16.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "prometheus-api-client==0.5.5",
    "aiohttp==3.10.11",
    "requests==2.32.3",
    "PyYAML==6.0.2",
    "httpx==0.27.2",
    "redis==5.2.0",
    "cachetools==5.2.0",
    "mako==1.3.8",
    "aio-pika==9.5.4",
    "PyJWT==2.10.1",
    "jwcrypto==1.5.6",
    "async-timeout==5.0.1",
]
[project.optional-dependencies]
test = [
    "httpx>=0.27.2",
    "pytest>=8.3.2",
    "trio==0.26.2",
    "pytest_asyncio>=0.24.0",
    "ruff>=0.6.3",
    "coverage>=7.6.1",
    "pysqlite3>=0.5.4",
    "pytest-custom_exit_code>=0.3.0"
]

[tool.setuptools.packages.find]
include = ["msfwk*", "pyarmor_runtime_*"]
exclude = ["tests*", "*.tests*"]

